# PE-Scraper

./: .gitignore  README.md  Requirements.md  Transcriipt_idea.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-environment-contract-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-core-pipeline-single-firm/: 02-01-PLAN.md  (+14 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
integrations/searxng/: docker-compose.yml  settings.yml
scripts/: install-heartbeat.ps1  nanoclaw_bridge.py  register_heartbeat_task.ps1  smoke_test.py  start-nanoclaw-bridge.ps1
src/pescraper/: __init__.py  automation.py  benchmark.py  cache.py  cli.py  confidence.py  crawl.py  dataset.py  db.py  decongest.py  discovery.py  doctor.py  export.py  exporter.py  extract.py  extract_schemas.py  ingest.py  merge.py  models.py  provenance.py  query.py  queue.py  runtime.py  worker.py
tests/: test_automation.py  test_batch.py  test_benchmark.py  test_cache.py  test_cli.py  test_confidence.py  test_crawl.py  test_db.py  test_decongest.py  test_discovery.py  test_doctor.py  test_export.py  test_extract.py  test_heartbeat.py  test_ingest.py  test_merge.py  test_provenance.py  test_query.py  test_run_firm_pipeline.py  test_runtime.py  test_worker.py
tests/benchmark/: golden_set.py
tests/fixtures/: benchmark.jsonl
(+28 files in other folders)
