[project]
name = "pescraper"
version = "0.1.0"
description = "Locally-run agent platform that builds a structured dataset of US private equity firms' investment criteria."
requires-python = ">=3.11,<3.13"
dependencies = [
    "crawl4ai==0.9.2",
    "ollama>=0.4",
    "pydantic>=2,<3",
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=9",
    "python-dotenv>=1",
    "openpyxl>=3.1",
]

[project.scripts]
pescraper = "pescraper.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pescraper"]
